Scripts/EKS Ingress Controller/Example/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue
  namespace: nginx-blue
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: nginx-blue
